@@ -119,7 +119,7 @@ public class InheritanceResolver {
             String candidate = null;
             for (List<String> linearization : linearizations) {
                 if (linearization.isEmpty()) continue;
-                candidate = linearization.get(0);
+                candidate = linearization.getFirst();
                 boolean isValidCandidate = true;
                 for (List<String> other : linearizations) {
                     if (other.indexOf(candidate) > 0) {
@@ -137,15 +137,15 @@ public class InheritanceResolver {
             result.add(candidate);
             // System.out.println("Selected candidate: " + candidate);
             for (List<String> linearization : linearizations) {
-                if (!linearization.isEmpty() && linearization.get(0).equals(candidate)) {
-                    linearization.remove(0);
+                if (!linearization.isEmpty() && linearization.getFirst().equals(candidate)) {
+                    linearization.removeFirst();
                 }
             }
             linearizations.removeIf(List::isEmpty);
         }
 
         // Ensure the current class is added at the beginning of the result
-        result.add(0, className);
+        result.addFirst(className);
         return result;
     }
 
